--- a/bezier-attention/bezierAttention.html
+++ b/bezier-attention/bezierAttention.html
@@ -130,7 +130,7 @@
 <body>
 
     <!-- ** Title ** -->
-    <h1>Comparing non-uniform resampling driven by sharpness vs. self-attention.</h1>
+    <h1>Comparing non-uniform resampling driven by sharpness vs. self-attention. <a href="https://github.com/folkstack/art-of-inference/blob/master/README.md">README</a></h1>
 
     <!-- ** Description columns ** -->
     <div class="description-columns">
